tests/break/invalid/semantic/BreakNotInLoop2.wacc
# break is not used inside a loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true then
    break
  else
    skip
  fi
end
